// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TableOrderIcon /> > renders an icon when all conditions are met 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-caret-down ml-1"
  data-icon="caret-down"
  data-prefix="fas"
  role="img"
  viewBox="0 0 384 512"
>
  <path
    d="M352 160c12.9 0 24.6 7.8 29.6 19.8s2.2 25.7-6.9 34.9l-160 160c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-9.2-9.2-11.9-22.9-6.9-34.9S19.1 160 32 160l320 0z"
    fill="currentColor"
  />
</svg>
`;

exports[`<TableOrderIcon /> > renders an icon when all conditions are met 2`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-caret-up ml-1"
  data-icon="caret-up"
  data-prefix="fas"
  role="img"
  viewBox="0 0 384 512"
>
  <path
    d="M32 352c-12.9 0-24.6-7.8-29.6-19.8S.2 306.5 9.4 297.4l160-160c12.5-12.5 32.8-12.5 45.3 0l160 160c9.2 9.2 11.9 22.9 6.9 34.9S364.9 352 352 352L32 352z"
    fill="currentColor"
  />
</svg>
`;
